--- a/app/index.html
+++ b/app/index.html
@@ -5,27 +5,32 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    
+    <!-- build:remove -->
     <!-- build:css css/app-css.css -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
+    <!-- /build -->
 
    
 
-   
+    <!-- build:remove -->
     <!-- build:js lib/vendor-lib.js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- endbuild -->
+    <!-- /build -->
     
     <script src="cordova.js"></script>
     <script src="lib/cordova-app-loader/dist/cordova-app-loader-complete.js"></script>
     <script type="text/javascript" timeout="5000" manifest="manifest.json" src="lib/cordova-app-loader/dist/bootstrap.js"></script>
 
+    <!-- build:remove -->
     <!-- build:js app/my-app.js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
     <!-- endbuild -->
+    <!-- /build -->
   </head>
 
   <body ng-app="starter">
